<resources>
    <string name="app_name">QuicXQuiz</string>
    <string name="sign">THE X COMPANY</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="question">Name the developer of this app.</string>
    <string name="a">OPTION 1</string>
    <string name="b">OPTION 2</string>
    <string name="c">OPTION 3</string>
    <string name="d">OPTION 4</string>
</resources>