<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0b1126"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity"
    android:gravity="center">

    <ImageView
        android:id="@+id/qimg"
        android:layout_width="316dp"
        android:layout_height="272dp"
        android:src="@drawable/aa"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="250dp"
        android:id="@+id/a"
        android:layout_height="wrap_content"
        android:text="@string/a"/>

    <Button
        android:layout_width="250dp"
        android:id="@+id/b"
        android:text="@string/b"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="250dp"
        android:id="@+id/c"
        android:text="@string/c"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="250dp"
        android:id="@+id/d"
        android:text="@string/d"
        android:layout_height="wrap_content"/>


</LinearLayout>